# ChangeLog for app-misc/krename
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.24 2004/05/01 12:22:09 centic Exp $

  01 May 2004; Dominik Stadler <centic@gentoo.org> krename-2.8.5.ebuild:
  Mark 2.8.5 stable on x86.

  14 Mar 2004; Dylan Carlson <absinthe@gentoo.org> krename-2.8.5.ebuild:
  Added amd64 to KEYWORDS.

  22 Feb 2004; David Holm <dholm@gentoo.org> krename-2.8.5.ebuild:
  Added to ~ppc.

*krename-2.8.3 (05 Jan 2004)
*krename-2.8.5 (05 Jan 2004)

  05 Jan 2004; Caleb Tennis <caleb@gentoo.org> krename-2.8.2.ebuild,
  krename-2.8.3.ebuild, krename-2.8.5.ebuild:
  New version

*krename-2.8.4 (04 Dec 2003)

  04 Dec 2003; Caleb tennis <caleb@gentoo.org> krename-2.8.4.ebuild:
  New version

  23 Oct 2003; Caleb Tennis <caleb@gentoo.org> krename-2.5.5.ebuild, metadata.xml:
  New version, remove old version, change metadata.xml to kde-other.

*krename-2.8.2 (11 Aug 2003)
 
  11 Aug 2003; Caleb Tennis <caleb@gentoo.org> krename-2.8.2.ebuild:
  Version bump

*krename-2.5.5 (28 Mar 2003)

  06 Apr 2003; Dan Armak <danarmak@gentoo.org> krename-2.5.5.ebuild:
  Add stable x86 keyword.

  28 Mar 2003; Seemant Kulleen <seemant@gentoo.org> krename-2.5.5.ebuild:
  version bump of unstable version

*krename-2.4.2 (28 Mar 2003)

  28 Mar 2003; Seemant Kulleen <seemant@gentoo.org> krename-2.4.1.ebuild,
  krename-2.4.2.ebuild, krename-2.5.3.ebuild:
  version bump for stable version

*krename-2.5.3 (18 Feb 2003)

  28 Mar 2003; Seemant Kulleen <seemant@gentoo.org> krename-2.4.1.ebuild,
  krename-2.5.3.ebuild:
  HOMEPAGE fix thanks to: Frantz Dhin <tragedy_rm@hotmail.com> in bug #18299

  18 Feb 2003; Hannes Mehnert <hannes@gentoo.org> krename-2.5.3.ebuild:
  version bump

*krename-2.5.1 (02 Feb 2003)

  02 Feb 2003; Hannes Mehnert <hannes@gentoo.org> krename-2.5.1.ebuild:
  version bump

*krename-2.5.0 (02 Jan 2003)
