@@ -1,10 +1,6 @@
-MD5 429833a5b72a3eb259e76d0b239856d7 ChangeLog 1311
-MD5 7b3a619ecd65af82d2d06af2d03efa7c bookcase-0.6.4.ebuild 529
-MD5 83024520c2ad9b092cebd6c9092b8af4 bookcase-0.7.2.ebuild 524
-MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
-MD5 5ed5cf35b480520e9d6dc6196691a668 bookcase-0.8.5.ebuild 1138
+MD5 84fc6f27e04ceb5b6b2b1c9dcbde5480 bookcase-0.9.2.ebuild 1146
 MD5 f689a7f3f4fd82b208e6af5e59589410 bookcase-0.9.ebuild 1148
-MD5 edc430e3841c42044fad11c9cd5a0959 files/digest-bookcase-0.6.4 66
-MD5 84d75ecb6d74dbfec93189d5aa212b4b files/digest-bookcase-0.7.2 67
-MD5 11fdde1e2db7871469f43029df88ed28 files/digest-bookcase-0.8.5 67
+MD5 85ec6ed6432bc84c0da8ed101a38fa6a ChangeLog 1521
+MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
 MD5 8d611da50b98d8babe16b64ba9d23845 files/digest-bookcase-0.9 65
+MD5 d6042935154ac4f436c1db8412012b2f files/digest-bookcase-0.9.2 67
