@@ -1,0 +1,1 @@
+MD5 5fe25ef1c226477fedd1038274bf0161 krename-3.0.0rc2.tar.bz2 585625
