@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/krename
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.24 2004/05/01 12:22:09 centic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.25 2004/05/25 23:56:11 caleb Exp $
+
+*krename-3.0.0_rc2 (25 May 2004)
+
+  25 May 2004; Caleb Tennis <caleb@gentoo.org> +krename-3.0.0_rc2.ebuild:
+  New version, ebuild thanks to Rene Gass (Bug #50803)
 
   01 May 2004; Dominik Stadler <centic@gentoo.org> krename-2.8.5.ebuild:
   Mark 2.8.5 stable on x86.
